src/scss/components/_contactForm.scss
.contactForm {
    display: none;
    &.active {
        display: block;
    }
    position: fixed;
    top: $h-topnav;
    left: 0;
    @include size(100%, calc(100% - #{$h-topnav}));
    background: #000000dd;
    backdrop-filter: blur(10px);
    .container {
        position: relative;
        max-width: 530px;
        min-height: 538px;
        @extend %center;
        background: var(--clr--bg);
        padding: 43px 4.5%;
        border-radius: $radius;
    }
    .title {
        @include flex(space-between, center);
    }
    h3 {
        text-align: left !important;
        font-size: $fs-contact;
    }
    p {
        font-weight: $fw-light;
    }
    .form {
        margin-top: 26px;
        & > * {
            width: 100%;
            border-radius: $radius;
            padding: 12px 16px;
            outline: 0;
            border: none;
            background: var(--clr--cyan30);
            &,
            &::placeholder {
                color: var(--clr-f-2);
            }
            &::placeholder {
                font-weight: $fw-light;
            }
            &:focus {
                border: 2px solid var(--clr--cyan);
            }
            &:not(:last-child) {
                margin-bottom: 17px;
            }
        }
        button {
            background: var(--clr--primary);
            color: var(--clr--white);
            cursor: pointer;
        }
    }
    textarea {
        resize: none;
        min-height: 122px;
    }
    h3 {
        color: var(--clr--title);
    }
    p {
        color: var(--clr-f-2);
    }
}

